# MREN203_Group9

./: HardwareOverview.drawio  Micro-Ros-Guide.txt  MotorControl.drawio  OverView.drawio  README.md  ROSworkspaceOverview.drawio  Untitled Diagram.drawio  Wiring Diagram.fzz  overview.drawio
MicroController/: platformio.ini
MicroController/include/: IMU.h  ROS.h  encoders.h  movement.h  parse.h  serialCom.h  sharp.h  wifiCom.h
MicroController/src/: IMU.cpp  ROS.cpp  encoders.cpp  main.cpp  movement.cpp  parse.cpp  serialCom.cpp  sharp.cpp  wifiCom.cpp
PCB/: Wiring Diagram.fzz  circuitjs-20260204-104959.txt  circuitjs-20260204-105334.txt
PI/: subscriber.py
Pi_backup/src/pi_arduino_bridge/: CMakeLists.txt  package.xml
Pi_backup/src/pi_arduino_bridge/include/: dataparser.hpp
Pi_backup/src/pi_arduino_bridge/src/: bridge.cpp
Pi_backup/src/startup/: CMakeLists.txt
Pi_backup/src/startup/launch/: launch.py
RaspberryPi/: CMakeLists.txt  bridge.cpp  dataparser.hpp  package.xml
pi_arduino_bridge/: CMakeLists.txt  package.xml
pi_arduino_bridge/src/: bridge.cpp
src/description/: CMakeLists.txt  package.xml
src/description/urdf/: hershey.urdf
src/pi_arduino_bridge/: CMakeLists.txt  README  package.xml
src/pi_arduino_bridge/src/: bridge.cpp
src/startup/: CMakeLists.txt  package.xml
src/startup/config/: nav2_params.yaml
src/startup/launch/: launch.py
