<?xml version="1.0"?>
<package format="3">
  <name>mren203_arduino_bridge</name>
  <version>0.0.1</version>
  <description>
    package communication between ROS2 and Arduino.
  </description>
  <maintainer email="hershey@hershey.com">Hershey</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>